2000-03-08  Ettore Perazzoli  <ettore@helixcode.com>

	* editor-control-factory.c
	(MAKE_VBOX_CONTROL): New #define.  If this is not #defined, we
	just put the GtkHTML widget into a scrolled window and make it a
	control.  Otherwise, we create a vbox and put the scrolled window
	with the GtkHTML widget and the toolbar in it.  Using the vbox
	slows the whole widget down greatly, and I have no idea why.

2000-03-03  Ettore Perazzoli  <ettore@helixcode.com>

	* editor-control-factory.c (editor_control_factory): Call
	`gtk_html_load_empty()' on the widget to make it an empty document
	after its created.

2000-03-01  Ettore Perazzoli  <ettore@helixcode.com>

	* editor-control-factory.c (uih_hack_cb): Do not create the
	toolbar here anymore.
	(uih_hack_cb): Removed.
	(editor_control_factory): Create the toolbar here.  Put the
	toolbar and the GtkHTML widget into a vbox.  Create the menu bar
	here too.
	(set_frame_cb): Removed.

	* toolbar.c (toolbar_setup): Return a `GtkWidget *' with the
	toolbar that we want to add, fixed on top of the GtkHTML
	component.
	(create_editor_toolbar): Return the raw `GtkWidget' instead of a
	`Bonobo_Control'.

2000-02-26  Ettore Perazzoli  <ettore@helixcode.com>

	* toolbar.c: Implemented buttons to indent paragraphs more or
	less.  Actually make the center/left/right alignment buttons
	behave as expected.  Added cut/copy/paste toolbar buttons.

2000-02-24  Ettore Perazzoli  <ettore@helixcode.com>

	* toolbar.c (create_editor_toolbar): Add the paragraph style
	GtkOptionMenu before everything else.

2000-02-22  Ettore Perazzoli  <ettore@helixcode.com>

	* toolbar.c (insertion_font_style_changed_cb): New function.
	(create_editor_toolbar): Connect it to the
	"insertion_font_style_changed_cb" signal.

	* toolbar.c: (editor_toolbar_bold_cb): Use the new style mask
	system.
	(editor_toolbar_italic_cb): Likewise.
	(editor_toolbar_underline_cb): Likewise.
	(editor_toolbar_strikeout_cb): Likewise.

2000-02-16  Dan Winship  <danw@helixcode.com>
