@@ -1,3 +1,11 @@
+2000-03-12  Ettore Perazzoli  <ettore@helixcode.com>
+
+	* editor-control-factory.c: Removed `MAKE_VBOX_CONTROL' #define as
+	the bug is gone.  Apparently GtkOptionMenu likes to queue resizes
+	on the parent even when not needed.  We now avoid recalculating
+	the toolbars and reflowing paragraphs unless the size has actually
+	changed, so the bug is gone.
+
 2000-03-08  Ettore Perazzoli  <ettore@helixcode.com>
 
 	* editor-control-factory.c
